@@ -1,5 +1,6 @@
 package org.folio.rest.api;
 
+import static java.util.Optional.ofNullable;
 import static org.folio.rest.api.StorageTestSuite.deleteAll;
 import static org.folio.rest.support.http.InterfaceUrls.holdingsStorageUrl;
 import static org.folio.rest.support.http.InterfaceUrls.instancesStorageUrl;
@@ -90,7 +91,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
 
   private static void verifyInstancesDataWithoutParameters(List<JsonObject> instancesData) {
     assertThat(
-      instancesData.get(0),
+      instancesData.getFirst(),
       allOf(
         hasCallNumberForItems("item effective call number 1", "item effective call number 2"),
         hasEffectiveLocationInstitutionNameForItems("Primary Institution"),
@@ -119,7 +120,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     holdingsRecordIdPredefined = createInstanceAndHolding(MAIN_LIBRARY_LOCATION_ID);
     predefinedHoldings = holdingsClient.getById(holdingsRecordIdPredefined).getJson();
 
-    predefinedInstance = instancesClient.getAll().get(0);
+    predefinedInstance = instancesClient.getAll().getFirst();
 
     createItem(MAIN_LIBRARY_LOCATION_ID, "item barcode", "item effective call number 1", journalMaterialTypeId);
     createItem(THIRD_FLOOR_LOCATION_ID, "item barcode 2", "item effective call number 2", bookMaterialTypeId);
@@ -158,7 +159,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     final List<JsonObject> instancesData = getInventoryHierarchyInstances(params);
     // then
     assertThat(
-      instancesData.get(0),
+      instancesData.getFirst(),
       allOf(
         hasIdForInstance(predefinedInstance.getString("id")),
         hasSourceForInstance(predefinedInstance.getString("source"))
@@ -176,7 +177,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     final List<JsonObject> instancesData = getInventoryHierarchyInstances(params);
     // then
     assertThat(
-      instancesData.get(0),
+      instancesData.getFirst(),
       allOf(
         hasIdForHoldings(predefinedHoldings.getString("id")),
         hasEffectiveLocationForHoldings("d:Main Library"),
@@ -206,7 +207,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     final List<JsonObject> instancesData = getInventoryHierarchyInstances(params);
     // then
     assertThat(
-      instancesData.get(0),
+      instancesData.getFirst(),
       allOf(
         hasIdForHoldings(predefinedHoldings.getString("id")),
         hasTemporaryLocationForHoldings("d:Annex Library"),
@@ -271,7 +272,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     params.put("deletedRecordSupport", "true");
     List<JsonObject> data = requestInventoryHierarchyViewUpdatedInstanceIds(params);
     // then
-    assertThat(data.get(0), isDeleted());
+    assertThat(data.getFirst(), isDeleted());
 
     // when
     params.put("deletedRecordSupport", "false");
@@ -342,7 +343,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     params.put("source", "TEST");
     List<JsonObject> data = getInventoryHierarchyInstances(params);
     // then
-    assertThat(data.get(0), allOf(
+    assertThat(data.getFirst(), allOf(
       hasCallNumberForItems("item effective call number 1", "item effective call number 2"),
       hasAggregatedNumberOfItems(2),
       hasEffectiveLocationInstitutionNameForItems("Primary Institution"))
@@ -351,9 +352,9 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     // when
     params.put(QUERY_PARAM_NAME_SKIP_SUPPRESSED_FROM_DISCOVERY_RECORDS, "false");
     data = getInventoryHierarchyInstances(params);
-    log.info(String.format("Inventory hierarchy instances data: %s", data));
+    log.info("Inventory hierarchy instances data: {}", data);
     // then
-    assertThat(data.get(0),
+    assertThat(data.getFirst(),
       allOf(
         hasCallNumberForItems("item effective call number 1", "item effective call number 3",
           "item effective call number 2"),
@@ -389,7 +390,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
   public void shouldRetrieveInstanceWhenOnlyHoldingDeletedWithinSpecificPeriodOfTime()
     throws InterruptedException, TimeoutException, ExecutionException {
     // given
-    var instanceId = UUID.fromString(instancesClient.getAll().get(0).getString("id"));
+    var instanceId = UUID.fromString(instancesClient.getAll().getFirst().getString("id"));
     var holdingUuid = createHolding(instanceId, MAIN_LIBRARY_LOCATION_ID, MAIN_LIBRARY_LOCATION_ID);
     var timeWhenRecordsCreated = LocalDateTime.now(ZoneOffset.UTC);
     Awaitility.await().until(() -> {
@@ -460,6 +461,36 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     });
   }
 
+  @Test
+  @SneakyThrows
+  public void shouldHaveLocationNameInItemsAndHoldingsLocations() {
+    var instanceId = UUID.fromString(predefinedInstance.getString("id"));
+
+    requestInventoryHierarchyItemsAndHoldingsViewInstance(new UUID[]{instanceId}, false, response -> {
+      assertThat(response.getStatusCode(), is(HttpStatus.HTTP_OK.toInt()));
+      var items = response.getJson().getJsonArray("items");
+      var holdings = response.getJson().getJsonArray("holdings");
+      items.stream().map(JsonObject.class::cast).map(item -> item.getJsonObject("location"))
+        .forEach(location -> {
+          assertTrue(ofNullable(location.getJsonObject("location"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+          assertTrue(ofNullable(location.getJsonObject("permanentLocation"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+          assertTrue(ofNullable(location.getJsonObject("temporaryLocation"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+        });
+      holdings.stream().map(JsonObject.class::cast).map(item -> item.getJsonObject("location"))
+        .forEach(location -> {
+          assertTrue(ofNullable(location.getJsonObject("effectiveLocation"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+          assertTrue(ofNullable(location.getJsonObject("permanentLocation"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+          assertTrue(ofNullable(location.getJsonObject("temporaryLocation"))
+            .map(loc -> loc.isEmpty() || loc.containsKey("locationName")).orElse(true));
+        });
+    });
+  }
+
   /**
    * The decode exception is thrown when we try to parse the response,
    * but the only relevant thing is the correct response status of 400.
@@ -509,7 +540,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
 
     // when
     params.put(QUERY_PARAM_NAME_SKIP_SUPPRESSED_FROM_DISCOVERY_RECORDS, "true");
-    JsonObject instancesData = getInventoryHierarchyInstances(params).get(0);
+    JsonObject instancesData = getInventoryHierarchyInstances(params).getFirst();
     JsonArray holdings = (JsonArray) instancesData.getValue("holdings");
     JsonArray items = (JsonArray) instancesData.getValue("items");
 
@@ -591,7 +622,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
 
     final Response response = future.get(TIMEOUT, TimeUnit.SECONDS);
     responseMatcher.handle(response);
-    log.info(String.format("%nResponse from inventory instance ids view: %s", response));
+    log.info("Response from inventory instance ids view: {}", response);
 
     final String body = response.getBody();
     if (StringUtils.isNotEmpty(body) && response.getStatusCode() != HttpStatus.HTTP_INTERNAL_SERVER_ERROR.toInt()) {
@@ -655,7 +686,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
     throws InterruptedException, ExecutionException, TimeoutException {
 
     // then
-    assertThat(instancesData.get(0),
+    assertThat(instancesData.getFirst(),
       allOf(hasCallNumberForItems("item effective call number 1", "item effective call number 2"),
         hasAggregatedNumberOfItems(2), hasEffectiveLocationInstitutionNameForItems("Primary Institution")));
 
@@ -665,7 +696,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
       .toString());
     instancesData = getInventoryHierarchyInstances(params);
     // then
-    assertThat(instancesData.get(0),
+    assertThat(instancesData.getFirst(),
       allOf(hasCallNumberForItems("item effective call number 1", "item effective call number 2"),
         hasAggregatedNumberOfItems(2), hasEffectiveLocationInstitutionNameForItems("Primary Institution")));
 
@@ -694,7 +725,7 @@ public class InventoryHierarchyViewTest extends TestBaseWithInventoryUtil {
       .toString());
     instancesData = getInventoryHierarchyInstances(params);
     // then
-    assertThat(instancesData.get(0),
+    assertThat(instancesData.getFirst(),
       allOf(hasCallNumberForItems("item effective call number 1", "item effective call number 2"),
         hasAggregatedNumberOfItems(2), hasEffectiveLocationInstitutionNameForItems("Primary Institution")));
 
